--- a/dashboard.html
+++ b/dashboard.html
@@ -756,9 +756,6 @@
             <div id="tutors" class="tab-content active">
                 <div class="action-buttons">
                     <input type="text" class="search-box" placeholder="Search tutors..." onkeyup="filterTable('tutors', this.value)">
-                    <button class="btn btn-primary" onclick="downloadExcel('tutorRegistrations', 'Tutor_Registrations.xlsx')">
-                        <i class="fas fa-download"></i> Download Latest Excel
-                    </button>
                     <button class="btn btn-secondary" onclick="exportAsCSV('tutors')">
                         <i class="fas fa-file-csv"></i> Export CSV
                     </button>
@@ -770,9 +767,6 @@
             <div id="schools" class="tab-content">
                 <div class="action-buttons">
                     <input type="text" class="search-box" placeholder="Search schools..." onkeyup="filterTable('schools', this.value)">
-                    <button class="btn btn-primary" onclick="downloadExcel('schoolRegistrations', 'Partner_Schools.xlsx')">
-                        <i class="fas fa-download"></i> Download Latest Excel
-                    </button>
                     <button class="btn btn-secondary" onclick="exportAsCSV('schools')">
                         <i class="fas fa-file-csv"></i> Export CSV
                     </button>
@@ -784,9 +778,6 @@
             <div id="parents" class="tab-content">
                 <div class="action-buttons">
                     <input type="text" class="search-box" placeholder="Search parents/students..." onkeyup="filterTable('parents', this.value)">
-                    <button class="btn btn-primary" onclick="downloadExcel('parentStudentRegistrations', 'Parent_Student_Registrations.xlsx')">
-                        <i class="fas fa-download"></i> Download Latest Excel
-                    </button>
                     <button class="btn btn-secondary" onclick="exportAsCSV('parents')">
                         <i class="fas fa-file-csv"></i> Export CSV
                     </button>
@@ -800,10 +791,17 @@
 
 
         <!-- Global Actions -->
-        <div class="action-buttons" style="margin-top: 30px; justify-content: center;">
-            <button class="btn btn-primary" onclick="downloadAllData()">
-                <i class="fas fa-download"></i> Download All Updated Data
-            </button>
+        <div class="action-actions" style="margin-top: 30px; text-align: center;">
+            <div class="alert alert-info" style="margin-bottom: 20px;">
+                <i class="fas fa-info-circle"></i> 
+                <strong>ONE Excel File Solution:</strong> Download this single file anytime and it will always contain the latest data. 
+                No need to download multiple files or worry about updates!
+            </div>
+            
+            <div class="action-buttons" style="justify-content: center;">
+                <button class="btn btn-primary" onclick="downloadAllDataInOneFile()">
+                    <i class="fas fa-download"></i> Download ALL Data in ONE Excel File
+                </button>
             <button class="btn btn-secondary" onclick="exportAllAsCSV()">
                 <i class="fas fa-file-csv"></i> Export All as CSV
             </button>
@@ -822,6 +820,7 @@
             <button class="btn btn-outline" onclick="logout()" style="border-color: #dc2626; color: #dc2626;">
                 <i class="fas fa-sign-out-alt"></i> Logout
             </button>
+            </div>
         </div>
     </div>
 
@@ -1343,6 +1342,15 @@
         // Download Excel file
         function downloadExcel(dataKey, filename) {
             excelHandler.downloadExcelFile(dataKey, filename);
+        }
+
+        // Download ALL data in ONE Excel file
+        function downloadAllDataInOneFile() {
+            if (window.excelHandler) {
+                window.excelHandler.downloadAllDataInOneFile();
+            } else {
+                alert('Excel handler not available');
+            }
         }
 
         // Export as CSV
