Complete button text update: all three registration buttons now properly labeled

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="hero-buttons">
                     <button class="btn btn-primary" onclick="openRegistrationModal(); console.log('Registration button clicked');">Register as a Partner School</button>
                     <button class="btn btn-secondary" onclick="openPartnerModal(); console.log('Partner button clicked');">Register as a Parent/Student</button>
-                    <button class="btn btn-tertiary" onclick="openParentStudentModal(); console.log('Parent/Student button clicked');">Join as a Parent/Student</button>
+                    <button class="btn btn-tertiary" onclick="openParentStudentModal(); console.log('Parent/Student button clicked');">Register as a Tutor</button>
                     <button class="btn btn-outline" onclick="scrollToContact(); console.log('Contact button clicked');">Contact Us</button>
                 </div>
             </div>
@@ -383,8 +383,8 @@
                 </div>
                 
                 <div class="join-card">
-                    <h3>Parent/Student Looking For Tutors?</h3>
-                    <p>Find qualified tutors for your educational needs</p>
+                    <h3>Aspiring Tutor?</h3>
+                    <p>Start your journey as a trained private tutor</p>
                     <button class="btn btn-secondary" onclick="openPartnerModal()">Click Here To Register Now →</button>
                 </div>
                 
@@ -923,7 +923,7 @@
     <div id="parentStudentModal" class="modal">
         <div class="modal-content scrollable-modal">
             <span class="close">&times;</span>
-            <h2>Parents/Students Registration</h2>
+            <h2>Register as a Tutor</h2>
                                 <form id="parentStudentForm" novalidate>
                 <div class="form-group">
                     <label for="parentName">1. Name of Parent *</label>
