Update gallery section: change Training Program to Training Module and add detailed 15 Days Training Module section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#program">Program</a></li>
+                    <li><a href="#training-module">Training Module</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#impact">Impact</a></li>
                     <li><a href="gallery">Gallery</a></li>
@@ -148,6 +149,75 @@
                         <div class="highlight-item">
                             <i class="fas fa-check-circle"></i>
                             <span>Recommendation For Private/CBSE Schools</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Training Module Section -->
+    <section id="training-module" class="training-module">
+        <div class="container">
+            <div class="section-header">
+                <h2>15 Days Training Module</h2>
+                <p>Comprehensive Training for Aspiring Educators</p>
+            </div>
+            
+            <div class="training-content">
+                <div class="methodology-section">
+                    <h3><i class="fas fa-cogs"></i> Methodology</h3>
+                    <div class="methodology-grid">
+                        <div class="methodology-item">
+                            <i class="fas fa-chalkboard-teacher"></i>
+                            <span>Interactive Lectures</span>
+                        </div>
+                        <div class="methodology-item">
+                            <i class="fas fa-theater-masks"></i>
+                            <span>Role Plays & Simulations</span>
+                        </div>
+                        <div class="methodology-item">
+                            <i class="fas fa-microphone"></i>
+                            <span>Micro-Teaching Sessions</span>
+                        </div>
+                        <div class="methodology-item">
+                            <i class="fas fa-users"></i>
+                            <span>Peer Learning</span>
+                        </div>
+                        <div class="methodology-item">
+                            <i class="fas fa-video"></i>
+                            <span>Audio-Visual Presentations</span>
+                        </div>
+                        <div class="methodology-item">
+                            <i class="fas fa-book-open"></i>
+                            <span>Real-Life Case Studies</span>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="outcomes-section">
+                    <h3><i class="fas fa-target"></i> Expected Outcomes</h3>
+                    <p>By the end of 15 days, trainees will:</p>
+                    <div class="outcomes-list">
+                        <div class="outcome-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Have solid pedagogy skills for effective classroom delivery</span>
+                        </div>
+                        <div class="outcome-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Communicate clearly and confidently with students and parents</span>
+                        </div>
+                        <div class="outcome-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Teach their subject with clarity, examples, and engagement techniques</span>
+                        </div>
+                        <div class="outcome-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Be interview-ready for private school or tutor jobs</span>
+                        </div>
+                        <div class="outcome-item">
+                            <i class="fas fa-check-circle"></i>
+                            <span>Receive a Shikshasathi Certified Professional Teacher certificate</span>
                         </div>
                     </div>
                 </div>
