--- a/gallery.html
+++ b/gallery.html
@@ -156,7 +156,7 @@
     <section class="gallery-hero">
         <div class="container">
             <h1><i class="fas fa-th-large"></i> Our Services</h1>
-            <p>Explore our testimonials, gallery, training programs, and placement opportunities</p>
+            <p>Explore our testimonials, gallery, training modules, and placement opportunities</p>
         </div>
     </section>
 
@@ -205,7 +205,7 @@
                 <div class="gallery-placeholder">
                     <div class="card-header">
                         <i class="fas fa-graduation-cap" style="font-size: 3rem; color: #dc2626; margin-bottom: 1rem;"></i>
-                        <h3 style="margin: 1rem 0; color: #1f2937; font-size: 1.5rem;">Training Program</h3>
+                        <h3 style="margin: 1rem 0; color: #1f2937; font-size: 1.5rem;">Training Module</h3>
                         <p style="color: #6b7280; margin: 0; font-size: 0.95rem;">Comprehensive training for aspiring educators</p>
                     </div>
                     <div class="card-footer">
