--- a/gallery.html
+++ b/gallery.html
@@ -200,13 +200,13 @@
                 </div>
             </div>
 
-            <!-- Training Program Card -->
+            <!-- Training Module Card -->
             <div class="gallery-item">
                 <div class="gallery-placeholder">
                     <div class="card-header">
                         <i class="fas fa-graduation-cap" style="font-size: 3rem; color: #dc2626; margin-bottom: 1rem;"></i>
                         <h3 style="margin: 1rem 0; color: #1f2937; font-size: 1.5rem;">Training Module</h3>
-                        <p style="color: #6b7280; margin: 0; font-size: 0.95rem;">Comprehensive training for aspiring educators</p>
+                        <p style="color: #6b7280; margin: 0; font-size: 0.95rem;">15 Days comprehensive training module for aspiring educators</p>
                     </div>
                     <div class="card-footer">
                         <a href="/#program" class="btn btn-outline" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; border: 2px solid #dc2626; color: #dc2626; font-size: 0.9rem; font-weight: 500;">Learn More</a>
