Update Partner School registration buttons to redirect to Google Form instead of modal

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h1 class="hero-title">Empowering Educators. Enabling Learning.</h1>
                 <p class="hero-subtitle">A Mission To Transform Unemployed Graduates Into Trained Private Tutors For Students Across Maharashtra.</p>
                 <div class="hero-buttons">
-                    <button class="btn btn-primary" onclick="openRegistrationModal(); console.log('Registration button clicked');">Register as a Partner School</button>
+                    <button class="btn btn-primary" onclick="window.open('https://forms.gle/UnnpivhYwQBAZywj8', '_blank'); console.log('Partner School registration clicked - opening Google Form');">Register as a Partner School</button>
                     <button class="btn btn-secondary" onclick="openPartnerModal(); console.log('Partner button clicked');">Register as a Parent/Student</button>
                     <button class="btn btn-tertiary" onclick="openParentStudentModal(); console.log('Parent/Student button clicked');">Register as a Tutor</button>
                     <button class="btn btn-outline" onclick="scrollToContact(); console.log('Contact button clicked');">Contact Us</button>
@@ -448,7 +448,7 @@
                 <div class="join-card">
                     <h3>Partner School?</h3>
                     <p>Partner with us to get quality educators</p>
-                    <button class="btn btn-primary" onclick="openRegistrationModal()">Click Here To Partner With Us →</button>
+                    <button class="btn btn-primary" onclick="window.open('https://forms.gle/UnnpivhYwQBAZywj8', '_blank')">Click Here To Partner With Us →</button>
                 </div>
                 
                 <div class="join-card">
