Update Tutor registration buttons to redirect to Google Form instead of modal

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="hero-buttons">
                     <button class="btn btn-primary" onclick="window.open('https://forms.gle/UnnpivhYwQBAZywj8', '_blank'); console.log('Partner School registration clicked - opening Google Form');">Register as a Partner School</button>
                     <button class="btn btn-secondary" onclick="window.open('https://forms.gle/FjxPLqaXu1r1ThedA', '_blank'); console.log('Parent/Student registration clicked - opening Google Form');">Register as a Parent/Student</button>
-                    <button class="btn btn-tertiary" onclick="openParentStudentModal(); console.log('Parent/Student button clicked');">Register as a Tutor</button>
+                    <button class="btn btn-tertiary" onclick="window.open('https://forms.gle/FdpQ2G7GUagdjFht5', '_blank'); console.log('Tutor registration clicked - opening Google Form');">Register as a Tutor</button>
                     <button class="btn btn-outline" onclick="scrollToContact(); console.log('Contact button clicked');">Contact Us</button>
                 </div>
             </div>
@@ -454,7 +454,7 @@
                 <div class="join-card">
                     <h3>Aspiring Tutor?</h3>
                     <p>Start your journey as a trained private tutor</p>
-                    <button class="btn btn-secondary" onclick="window.open('https://forms.gle/FjxPLqaXu1r1ThedA', '_blank')">Click Here To Register Now →</button>
+                    <button class="btn btn-secondary" onclick="window.open('https://forms.gle/FdpQ2G7GUagdjFht5', '_blank')">Click Here To Register Now →</button>
                 </div>
                 
                 <div class="join-card">
