ADDED MSME logo

--- a/index.html
+++ b/index.html
@@ -50,6 +50,21 @@
             <div class="hero-content">
                 <h1 class="hero-title">Empowering Educators. Enabling Learning.</h1>
                 <p class="hero-subtitle">A Mission To Transform Unemployed Graduates Into Trained Private Tutors For Students Across Maharashtra.</p>
+                
+                <!-- Logo Section -->
+                <div class="logo-section">
+                    <div class="main-logo">
+                        <img src="assets/images/Education.png" alt="ShikshaSathi Logo" class="logo-image">
+                        <h3 class="logo-text">ShikshaSathi</h3>
+                    </div>
+                    <div class="msme-logo">
+                        <div class="msme-logo-container">
+                            <div class="msme-logo-text">MSME</div>
+                            <div class="msme-registration">Registration No: MSME-123456789</div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="hero-buttons">
                     <button class="btn btn-primary" onclick="window.open('https://forms.gle/UnnpivhYwQBAZywj8', '_blank'); console.log('Partner School registration clicked - opening Google Form');">Register as a Partner School</button>
                     <button class="btn btn-secondary" onclick="window.open('https://forms.gle/FjxPLqaXu1r1ThedA', '_blank'); console.log('Parent/Student registration clicked - opening Google Form');">Register as a Parent/Student</button>
