ADDED MSME logo

--- a/index.html
+++ b/index.html
@@ -569,14 +569,16 @@
         <div class="container">
             <!-- Logo Section in Footer -->
             <div class="footer-logo-section">
-                <div class="main-logo">
-                    <img src="assets/images/Education.png" alt="ShikshaSathi Logo" class="footer-logo-image">
-                    <h3 class="footer-logo-text">ShikshaSathi</h3>
-                </div>
-                <div class="msme-logo">
-                    <div class="msme-logo-container">
-                        <div class="msme-logo-text">MSME</div>
-                        <div class="msme-registration">Registration No: MSME-123456789</div>
+                <div class="logo-container">
+                    <div class="main-logo">
+                        <img src="assets/images/Education.png" alt="ShikshaSathi Logo" class="footer-logo-image">
+                        <h3 class="footer-logo-text">ShikshaSathi</h3>
+                    </div>
+                    <div class="msme-logo">
+                        <div class="msme-logo-container">
+                            <div class="msme-logo-text">MSME</div>
+                            <div class="msme-registration">Registration No: MSME-123456789</div>
+                        </div>
                     </div>
                 </div>
             </div>
