ADDED MSME logo

--- a/index.html
+++ b/index.html
@@ -577,12 +577,12 @@
                     <!-- Logo Section below the tagline -->
                     <div class="footer-logo-box">
                         <div class="footer-logo-item">
-                            <img src="assets/images/Education.png" alt="ShikshaSathi Logo" class="footer-logo-small">
+                            <img src="assets/images/shiksha_footer.png" alt="ShikshaSathi Logo" class="footer-logo-small">
                             <span class="footer-logo-label">ShikshaSathi</span>
                         </div>
                         <div class="footer-msme-item">
                             <div class="footer-msme-box">
-                                <div class="footer-msme-title">MSME</div>
+                                <img src="assets/images/msme logo.png" alt="MSME Logo" class="footer-msme-logo">
                                 <div class="footer-msme-reg">Reg: MSME-123456789</div>
                             </div>
                         </div>
