ADDED MSME logo

--- a/index.html
+++ b/index.html
@@ -576,14 +576,11 @@
                     
                     <!-- Logo Section below the tagline -->
                     <div class="footer-logo-box">
-                        <div class="footer-logo-item">
+                        <div class="logo-white-container">
                             <img src="assets/images/shiksha_footer.png" alt="ShikshaSathi Logo" class="footer-logo-small">
                         </div>
-                        <div class="footer-msme-item">
-                            <div class="footer-msme-box">
-                                <img src="assets/images/msme logo.png" alt="MSME Logo" class="footer-msme-logo">
-                                <div class="footer-msme-reg">Reg: MSME-123456789</div>
-                            </div>
+                        <div class="logo-white-container">
+                            <img src="assets/images/msme logo.png" alt="MSME Logo" class="footer-msme-logo">
                         </div>
                     </div>
                 </div>
